--- a/src/modules/survey/i18n/translations.json
+++ b/src/modules/survey/i18n/translations.json
@@ -43,14 +43,14 @@
       "a_lot": "काफी अधिक",
       "dominates": "पूरी तरह हावी",
   
-      "pleasant": "सुहावना",
+      "pleasant": "सुहावना (सुखद)",
       "chaotic": "शोरगुल",
-      "vibrant": "जीवंत",
-      "uneventful": "निष्क्रिय",
-      "calm": "शांत",
-      "annoying": "कष्टदायक",
+      "vibrant": "जीवंत (चहल-पहल)",
+      "uneventful": "निष्क्रिय (बिना खास हलचल के)",
+      "calm": "शांत (सुकूनभरा)",
+      "annoying": "कष्टदायक (परेशान करने वाला)",
       "eventful": "हलचलपूर्ण",
-      "monotonous": "एकरस",
+      "monotonous": "एकरस (एक जैसा)",
 
       "Strongly agree" : "पूरी तरह सहमत",
       "Somewhat agree" : "कुछ हद तक सहमत",
